<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilePage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:padding="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:background="@drawable/borderline"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:fontFamily="@font/madimi"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                app:lottie_rawRes="@raw/settings"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>
        </com.google.android.material.appbar.MaterialToolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:padding="10dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="0dp"
                    android:padding="5dp">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/borderline"
                        android:layout_gravity="center"
                        android:src="@drawable/mig1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            android:textAlignment="center"
                            android:textSize="35sp"
                            android:textStyle="bold"/>

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            app:lottie_rawRes="@raw/verified"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <Button
                            android:id="@+id/logout_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/logout" />

                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:text="@string/about"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/bio"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true" />
                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/user_information"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/username_"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/shoName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:hint="@string/app_name"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="15sp"
                            android:fontFamily="@font/poppinsmedium"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text="@string/male"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text="@string/_00"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text="@string/_00_00_2024"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text="@string/_91_9000000009"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/shoEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:text="@string/axxxxxxa_gmail_com"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/social_media"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>
                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:useDefaultMargins="true"
                        android:rowCount="1"
                        android:columnCount="3">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:lottie_loop="true"
                            app:lottie_autoPlay="true"
                            app:lottie_rawRes="@raw/twitter"/>

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:lottie_loop="true"
                            app:lottie_autoPlay="true"
                            app:lottie_rawRes="@raw/linkedin"/>

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:lottie_loop="true"
                            app:lottie_autoPlay="true"
                            app:lottie_rawRes="@raw/github"/>

                    </GridLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </LinearLayout>
</ScrollView>