<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signupTabFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:padding="20dp"
                tools:ignore="UselessParent">

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="100dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:contentDescription="@string/todo"-->
<!--                    android:src="@drawable/mig1" />-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <EditText
                        android:id="@+id/name"
                        android:layout_width="290dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="2dp"
                        android:background="@drawable/edittext_bkg"

                        android:autofillHints=""
                        android:drawablePadding="10dp"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="0dp"
                        android:layout_toStartOf="@+id/signup_email"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/email" />

                    <EditText
                        android:id="@+id/signup_email"
                        android:layout_width="290dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="-1dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_bkg"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="0dp"
                        android:layout_toStartOf="@+id/signup_password"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/password" />

                    <EditText
                        android:id="@+id/signup_password"
                        android:layout_width="290dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="2dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_bkg" android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="0dp"
                        android:layout_toStartOf="@+id/signup_confirm"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/confirmpassword" />
                    <EditText
                        android:id="@+id/signup_confirm"
                        android:layout_width="290dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="0dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_bkg"
                        android:drawablePadding="8dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray" />
                </RelativeLayout>

                <Button
                    android:layout_width="320dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:id="@+id/signup_button"
                    android:textSize="18sp"
                    android:text="@string/signup"
                    app:cornerRadius = "30dp"/>
            </LinearLayout>

</ScrollView>